--- a/web/themes/custom/eses/scss/component/_calendar.scss
+++ b/web/themes/custom/eses/scss/component/_calendar.scss
@@ -2,10 +2,15 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 
 .mini-calendar {
   .events {
-    list-style-type: none;
-    padding: 0;
     max-height: 200px;
     overflow: scroll;
+  }
+}
+
+.calendar {
+  .events {
+    list-style-type: none;
+    padding: 0;
 
     .event {
       @include clearfix;
