--- a/web/themes/custom/eses/scss/component/_calendar.scss
+++ b/web/themes/custom/eses/scss/component/_calendar.scss
@@ -41,6 +41,13 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
           font-size: 1.5em;
           background: #fff;
         }
+
+        .day-of-week {
+          width: 100%;
+          display: block;
+          color: #999;
+          margin-top: -5px;
+        }
       }
 
       .details {
