--- a/web/themes/custom/eses/scss/component/_asides.scss
+++ b/web/themes/custom/eses/scss/component/_asides.scss
@@ -45,6 +45,13 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       top: 1 * ($sidebar-tab-size + 10px);
       z-index: 5;
     }
+    &#block-testimonials {
+      &::before {
+        background-image: url(../images/icon_testimonials.png);
+      }
+      top: 2 * ($sidebar-tab-size + 10px);
+      z-index: 4;
+    }
 
     .resource-list {
       list-style-type: none;
@@ -58,14 +65,21 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
     }
 
     .testimonials {
-      background: top left no-repeat url(../images/icon_testimonials.png);
-      background-size: 25%;
-      padding-left: 26%;
       font-size: .8em;
 
       .attribution {
-        margin-top: .5em;
+        margin-top: 1em;
         font-style: italic;
+
+        &::before {
+          content: ' - ';
+        }
+      }
+
+      @media #{$tablet} {
+        background: top left no-repeat url(../images/icon_testimonials.png);
+        background-size: 25%;
+        padding-left: 26%;
       }
     }
 
