--- a/web/themes/custom/eses/scss/component/_eses.scss
+++ b/web/themes/custom/eses/scss/component/_eses.scss
@@ -3,6 +3,15 @@ h1, h2, h3, h4, h5, .block-title {
   font-family: $font-family-headers;
 }
 
+body {
+  @media #{$tablet} {
+    background: top center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: url('/sites/default/files/classroom.jpg');
+  }
+}
+
 .block-title {
   margin-top: 0;
   font-size: 1.25em;
@@ -23,28 +32,15 @@ h1, h2, h3, h4, h5, .block-title {
   min-height: 350px; // This wouldn't be needed if overflow-x worked without cutting off elements on the vertical axis
   @media #{$tablet} {
     padding-top: 70px;
+    background: linear-gradient(to top, rgba(255,255,255,.85) 0%,rgba(255,255,255,.85) 99%,rgba(255,255,255,0) 100%);
   }
   @media #{$wide} {
     padding-top: 90px;
   }
 }
-//.path-frontpage {
-//  #block-slideshow {
-//    display: none;
-//    @media #{$tablet} {
-//      display: block;
-//    }
-//  }
-//
-//  .main-container {
-//    @media #{$tablet} {
-//      padding-top: 270px;
-//    }
-//    @media #{$wide} {
-//      padding-top: 290px;
-//    }
-//  }
-//}
+.sub-header {
+  padding: 0;
+}
 
 .field--name-node-changed-date {
   font-size: .7em;
@@ -122,7 +118,7 @@ h1, h2, h3, h4, h5, .block-title {
     position: fixed;
     z-index: 1030;
     min-height: 70px;
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 75%,rgba(255,255,255,0) 100%);;
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 75%,rgba(255,255,255,0) 100%);
 
     .school-logo {
       position: absolute;
@@ -152,6 +148,12 @@ h1, h2, h3, h4, h5, .block-title {
   }
 }
 
+.footer {
+  background: #fff;
+  @media #{$tablet} {
+    background: rgba(255,255,255,.85);
+  }
+}
 .block-footer-message {
   text-align: center;
   font-size: $font-size-small;
