--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -8013,6 +8013,10 @@ h1, h2, h3, h4, h5, .block-title {
   }
 }
 
+a {
+  font-weight: bold;
+}
+
 .block-title {
   margin-top: 0;
   font-size: 1.25em;
