--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -7664,6 +7664,9 @@ body.navbar-is-fixed-bottom {
   border: none;
   margin-bottom: 0;
 }
+.navbar #block-eses-main-menu-menu {
+  color: #fff;
+}
 @media screen and (min-width: 768px) {
   .navbar {
     background-color: #8052bf;
